<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:title="@string/home" />
        <item
            android:id="@+id/nav_challenge"
            android:title="@string/challenge" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_following"
                android:title="@string/following" />
            <item
                android:id="@+id/nav_store"
                android:title="@string/store" />
        </menu>
    </item>
</menu>

<!--<item-->
<!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->