<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.adpic.adpic.SignupActivity"
    android:background="@drawable/adpic_collage_small">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/create_form_layout">

        <ProgressBar
            android:id="@+id/create_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress"
            android:layout_below="@id/glowing_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:id="@+id/create_form_elements"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/cyan"
                android:text="@string/create_an_acc"
                android:singleLine="true"
                android:maxLines="1"
                android:textSize="30sp"
                android:paddingBottom="12dp"
                android:elegantTextHeight="false"
                android:gravity="center"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@color/white"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp"
                android:layout_marginBottom="8dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@color/white"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp"
                android:layout_marginBottom="8dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_again"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@color/white"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp"
                android:layout_marginBottom="8dp"/>
            <Button
                android:id="@+id/create_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textStyle="bold"
                android:background="@drawable/transparent_btn_border"
                android:textColor="@color/cyan"
                android:minHeight="35dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/adpic_backglow_white"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/create_form_layout"/>

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:tint="@color/cyan"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>



</RelativeLayout>
