<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/adpic_collage_small"
    tools:context="com.adpic.adpic.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/adpic_backglow_white"
            android:id="@+id/glowing_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="50dp"/>

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress"
            android:layout_below="@id/glowing_logo"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/glowing_logo"
            android:id="@+id/form_elements">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@color/white"
                    android:paddingLeft="12dp"
                    android:paddingTop="4dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="4dp"
                    android:layout_marginBottom="8dp"/>


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@color/white"
                    android:paddingLeft="12dp"
                    android:paddingTop="4dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="4dp"/>

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:textColor="@color/cyan"
                    android:minHeight="35dp"
                    android:background="@drawable/transparent_btn_border"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:id="@+id/trouble_signing_in"
                android:layout_below="@id/email_login_form"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Trouble signing in?"
                    android:textColor="@color/white"
                    android:paddingRight="4dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Click here"
                    android:textColor="@color/cyan"
                    android:textStyle="bold"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/trouble_signing_in"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="or"
                    android:id="@+id/or"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"/>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_toLeftOf="@id/or"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="30dp"></View>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_toRightOf="@id/or"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="30dp"></View>

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/fb_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/or"
                    android:layout_marginTop="12dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/sign_up_here">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account?"
                    android:textColor="@color/white"
                    android:paddingRight="4dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign up here"
                    android:textColor="@color/cyan"
                    android:textStyle="bold"
                    android:id="@+id/signup_link"/>
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_above="@id/sign_up_here"
                android:background="@color/white"
                android:layout_marginBottom="4dp"
                />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
